tests/tests/ui/enum_collection_field_storage_out_of_range.stderr
error[E0277]: field type `Status` is not compatible with the requested column storage `toasty::codegen_support::storage::tag::U8`
  --> tests/ui/enum_collection_field_storage_out_of_range.rs:12:15
   |
12 |     statuses: Vec<Status>,
   |               ^^^^^^^^^^^ incompatible Rust type for `#[column(type = ...)]`
   |
help: the trait `toasty::codegen_support::storage::CompatibleWith<toasty::codegen_support::storage::tag::U8>` is not implemented for `Status`
  --> tests/ui/enum_collection_field_storage_out_of_range.rs:2:1
   |
 2 | enum Status {
   | ^^^^^^^^^^^
   = note: see `toasty::codegen_support::storage` for the compatibility table
   = help: the following other types implement trait `toasty::codegen_support::storage::CompatibleWith<Storage>`:
             `Status` implements `toasty::codegen_support::storage::CompatibleWith<toasty::codegen_support::storage::tag::I16>`
             `Status` implements `toasty::codegen_support::storage::CompatibleWith<toasty::codegen_support::storage::tag::I32>`
             `Status` implements `toasty::codegen_support::storage::CompatibleWith<toasty::codegen_support::storage::tag::I64>`
             `Status` implements `toasty::codegen_support::storage::CompatibleWith<toasty::codegen_support::storage::tag::Int<3>>`
             `Status` implements `toasty::codegen_support::storage::CompatibleWith<toasty::codegen_support::storage::tag::Int<5>>`
             `Status` implements `toasty::codegen_support::storage::CompatibleWith<toasty::codegen_support::storage::tag::Int<6>>`
             `Status` implements `toasty::codegen_support::storage::CompatibleWith<toasty::codegen_support::storage::tag::Int<7>>`
             `Status` implements `toasty::codegen_support::storage::CompatibleWith<toasty::codegen_support::storage::tag::U16>`
           and $N others
   = note: required for `Vec<Status>` to implement `toasty::codegen_support::storage::CompatibleWith<toasty::codegen_support::storage::tag::U8>`
note: required by a bound in `_check`
  --> tests/ui/enum_collection_field_storage_out_of_range.rs:7:10
   |
 7 | #[derive(toasty::Model)]
   |          ^^^^^^^^^^^^^ required by this bound in `_check`
...
12 |     statuses: Vec<Status>,
   |               --- required by a bound in this function
   = note: this error originates in the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)
